# Typing-game

./: CMakeLists.txt  README.md  main.cpp
assets/: save.txt  scores.txt  words.txt
